# simplesok-revised

./: .gitignore  INSTALL_AND_RUN.txt  Makefile.am  PACKAGING.md  README.md  SKINS.md  WAYLAND_SDL.md  compat-sdl.c  compat-sdl.h  config.h.in  configure  configure.ac  crc32.c  crc64.c  crc64.h  dbg.h  file2c  gra.c  gra.h  gz.c  gz.h  history.txt  net-curl.c  net-socket.c  net.h  save.c  save.h  simplesok.6.in  simplesok.c  simplesok.txt  skin.c  skin.h  sok_core.c  sok_core.h
.github/workflows/: build.yml
pkgbuild/deb/: simplesok.dsc
pkgbuild/flatpak/: io.osdn.simplesok.metainfo.xml
pkgbuild/rpm/: simplesok.spec.in
pkgbuild/rpm_fedora/: simplesok.spec.in
skins/: Makefile.am
